# fantom

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  FUNCTIONAL_REQUIREMENTS.md  README.md
.github/workflows/: greetings.yml  main.yml  memtests.yml  stale.yml
fantom-application/: CMakeLists.txt  fantom-application_en_GB.ts  main.cpp  mainwindow.h
fantom-application/src/: banner.h  security.h
fantom-application/tests/: curl_utils.c  curl_utils.h  main.c  test_security.c  testing.c
fantom-frontend/: README.md  package.json  pnpm-lock.yaml
fantom-frontend/src/: app.d.ts
fantom-server/: .gitignore  CMakeCache.txt  CMakeLists.txt  format.sh  mem_test.py  mem_tests.py  mem_tests.sh
fantom-server/src/: ;  banner.c  banner.h  cli_help.h  config.c  config.h  db.c  db.h  fantom_str.c  fantom_str.h  fantom_utils.h  logger.c  logger.h  main.c  main.cpp  main.h  mongoose.c  mongoose.h  security.c  security.h  server.c  server.h  utils.c  utils.h
fantom-server/src/enp/: change_password.c  change_password.h  get_nonce.c  get_nonce.h  login.c  login.h
fantom-server/src/monitoring/: cpu.c  cpu.h  ram.c  ram.h
fantom-server/tests/: curl_utils.c  fantom_str_test.cpp  fantom_str_test.h  main.c  runner.cpp  sys_tests.c  sys_tests.h  test_config.c  test_config.h  test_db.c  test_db.h  test_security.c  test_security.h  test_server.c  test_server.h  test_utils.c  test_utils.h  testing.c  testing.h
fantom-server/tests/monitoring/: test_cpu.c  test_cpu.h  test_ram.c  test_ram.h
src/: config.h  fantom_str.c  fantom_str.h  fantom_utils.h  logger.c  logger.h  security.c  security.h
tests/: runner.cpp
